# Corrective-RAG-

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  rag_engine.py  rag_pipeline.ipynb
app/chroma_db/: README.txt
app/data/: README.txt
