[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.137.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-ollama>=1.1.0",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
